--- a/aboutus.html
+++ b/aboutus.html
@@ -8,8 +8,8 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Aboutus</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1761822956990"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1761822956990">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1761908700870"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1761908700870">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -434,7 +434,63 @@
 					</div>
 				</div>
 				<section class="about">
-					<div class="about__container"></div>
+					<div class="about__container">
+						<div class="about__body">
+							<div class="about__content">
+								<h1>Ломбард «Жовтий»</h1>
+								<p>
+									<b>Ломбард «Жовтий»</b>
+									— це прозорі умови, вигідні відсотки та зручне розташування у центрі міста.
+								</p>
+								<p>
+									Нашою метою є забезпечення покупців доступними товарами, незалежно від їх місця проживання або
+                    розташування магазинів в
+                    нашій мережі.
+								</p>
+								<hr>
+								<h3>Наші послуги:</h3>
+								<ul>
+									<li>Кредит під заставу золота, техніки, смартфонів, годинників</li>
+									<li>Безкоштовна оцінка за 5 хвилин</li>
+									<li>Готівка одразу на місці</li>
+									<li>Можливість продовження договору або часткового погашення</li>
+									<li>Конфіденційність та збереження застави</li>
+								</ul>
+								<hr>
+								<h3>Переваги ломбарду «Жовтий»</h3>
+								<ul>
+									<li>Відсоткова ставка від 0,3% на день</li>
+									<li>Працюємо щодня з 8:00 до 20:00</li>
+									<li>Два відділення у центрі міста</li>
+									<li>Прозорі договори без дрібного шрифту</li>
+									<li>Висока ціна на золото та техніку</li>
+								</ul>
+								<p>
+									У нашій мережі роздрібних комісійних магазинів представлені товари, що були у вжитку, на будь-який
+                    смак та гаманець, в
+                    різних комплектаціях, косметичному та технічному стані, для будь-яких потреб. У нас ви зможете
+                    знайти та придбати*
+                    товари як в ідеальному стані з повною комплектацією, так і товари для відновлення, або ж
+                    товари-донори для ремонту інших
+                    предметів та техніки. Вся інформація про товар, яка відображається на нашому сайті, надається
+                    максимально чесно та
+                    правдиво. Якщо у вас виникли будь-які додаткові питання щодо товару, ви можете звернутися до
+                    менеджера. Наші товари
+                    проходять обов'язкову перевірку перед пакуванням та відправкою клієнту. За якість пересилання несе
+                    відповідальність
+                    поштовий оператор, тому, перевірка клієнтом при отриманні у відділенні пошти обов'язкова! Це
+                    дозволить вирішити
+                    більшість питань. Ми завжди готові йти назустріч клієнту та докладати всі можливі зусилля для
+                    розв'язання будь-якої
+                    проблеми. Якщо при перевірці товару в відділенні пошти виникнуть питання, зверніться відразу до
+                    менеджера.
+								</p>
+							</div>
+							<figure class="about__img" data-top-position="">
+								<img alt="Image" loading="lazy" src="./assets/img/about/2025-05-01.webp">
+							</figure>
+						</div>
+					</div>
 				</section>
 			</main>
 			<footer class="footer">
