--- a/delivery.html
+++ b/delivery.html
@@ -7,9 +7,9 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
-		<title>Product</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1761908700867"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1761908700867">
+		<title>Delivery</title>
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1761908700869"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1761908700869">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -420,7 +420,7 @@
 					</div>
 				</div>
 			</header>
-			<main class="page page--product">
+			<main class="page page--delivery">
 				<div class="breadcrumbs">
 					<div class="breadcrumbs__container">
 						<ul class="breadcrumbs__list">
@@ -428,279 +428,45 @@
 								<a href="#" class="breadcrumbs__link">Головна</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<a href="#" class="breadcrumbs__link">Магазин</a>
-							</li>
-							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__link is-active">Золота каблучка - "Чарівний кошик"</span>
+								<span class="breadcrumbs__link is-active">Доставка і оплата</span>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<section class="product-detail">
-					<div class="product-detail__container">
-						<div class="product-detail__body">
-							<div class="product-detail__images" data-top-position="">
-								<div data-fls-slider="" class="product-detail__slider swiper">
-									<div data-fls-gallery="" class="product-detail__wrapper swiper-wrapper">
-										<a href="./assets/img/menu-catalog/image-1.webp" class="product-detail__slide swiper-slide" data-fls-zoom="">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-1.webp">
-										</a>
-										<a href="./assets/img/menu-catalog/image-2.webp" class="product-detail__slide swiper-slide" data-fls-zoom="">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-2.webp">
-										</a>
-										<a href="./assets/img/menu-catalog/image-3.webp" class="product-detail__slide swiper-slide" data-fls-zoom="">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-3.webp">
-										</a>
-										<a href="./assets/img/menu-catalog/image-4.webp" class="product-detail__slide swiper-slide" data-fls-zoom="">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-4.webp">
-										</a>
-									</div>
-									<div class="product-detail__arrows">
-										<button type="button" class="swiper-button-prev">
-											<svg width="12" height="18" viewbox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path d="M10 16L3 9L10 2" stroke="currentColor" stroke-width="3"></path>
-											</svg>
-										</button>
-										<button type="button" class="swiper-button-next">
-											<svg width="11" height="18" viewbox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path d="M1.5 2L8.5 9L1.5 16" stroke="currentColor" stroke-width="3"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div data-fls-slider="" class="product-detail__thumbs swiper">
-									<div class="product-detail__wrapper swiper-wrapper">
-										<div class="product-detail__slide swiper-slide">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-1.webp">
-										</div>
-										<div class="product-detail__slide swiper-slide">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-2.webp">
-										</div>
-										<div class="product-detail__slide swiper-slide">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-3.webp">
-										</div>
-										<div class="product-detail__slide swiper-slide">
-											<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-4.webp">
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="product-detail__content">
-								<h1 class="product-detail__title title title--h2">Золота каблучка - "Чарівний кошик"</h1>
-								<div class="product-detail__row">
-									<div class="product-detail__label">Артикул:</div>
-									<div class="product-detail__value">510485600</div>
-								</div>
-								<div class="product-detail__row">
-									<div class="product-detail__value">В наявності</div>
-								</div>
-								<div class="product-detail__prices">
-									<div class="product-detail__oldprice">6 345 грн</div>
-									<div class="product-detail__price">5 500 грн</div>
-								</div>
-								<button type="button" class="product-detail__buy button">
-									<span>Купити</span>
-									<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-									</svg>
-								</button>
-								<div class="product-detail__info">
-									<div class="product-detail__info-title title title--h3">Характеристики</div>
-									<dl class="product-detail__list info-rows">
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Тип металу:</dt>
-											<dd class="info-rows__value">Золото</dd>
-										</div>
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Проба:</dt>
-											<dd class="info-rows__value">585</dd>
-										</div>
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Стать:</dt>
-											<dd class="info-rows__value">Унісекс</dd>
-										</div>
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Розмір:</dt>
-											<dd class="info-rows__value">18</dd>
-										</div>
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Вага:</dt>
-											<dd class="info-rows__value">1.41 г</dd>
-										</div>
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Колір металу:</dt>
-											<dd class="info-rows__value">Червоне золото</dd>
-										</div>
-										<div class="info-rows__item">
-											<dt class="info-rows__label">Клеймо:</dt>
-											<dd class="info-rows__value">✓</dd>
-										</div>
-									</dl>
-								</div>
-							</div>
+				<section class="info">
+					<div class="info__container">
+						<div class="info__content">
+							<h1>Доставка і оплата</h1>
+							<h3>Доставка</h3>
+							<h4>Клієнти інтернет-магазину «Жовтий» можуть обрати такі варіанти доставки:</h4>
+							<ul>
+								<li>
+									На вказане відділення Нової Пошти або адресна доставка відповідно до тарифів перевізника
+								</li>
+								<li>
+									На вказане відділення Укрпошти або адресна доставка відповідно до тарифів перевізника
+								</li>
+								<li>Самовивіз</li>
+							</ul>
+							<hr>
+							<h3>Оплата</h3>
+							<h4>Для Вашої зручності доступні такі варіанти оплати:</h4>
+							<ul>
+								<li>
+									Післяплата згідно з тарифами перевізника. Ви оплачуєте товар при його отриманні у відділенні Нової
+                    Пошти або за
+                    адресою доставки.&nbsp;
+								</li>
+								<li>
+									Оплата онлайн банківською карткою. При виборі цього варіанту оплати Ви будете автоматично
+                    перенаправлені на
+                    сторінку платіжної системи, де у відповідних полях необхідно буде ввести дані Вашої картки. Оплата
+                    зараховується
+                    протягом декількох хвилин, після чого Ви отримаєте лист з підтвердженням факту оплати.
+								</li>
+								<li>Оплата готівкою при самовивозі з магазину.</li>
+							</ul>
 						</div>
-					</div>
-				</section>
-				<section class="proposals">
-					<div class="proposals__container">
-						<div class="proposals__head">
-							<h2 class="proposals__title title title--h2 lines-decor lines-decor--right">Схожий товар</h2>
-							<div class="proposals__navigation">
-								<button type="button" class="swiper-button-prev">
-									<svg width="12" height="18" viewbox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M10 16L3 9L10 2" stroke="currentColor" stroke-width="3"></path>
-									</svg>
-								</button>
-								<div class="swiper-pagination"></div>
-								<button type="button" class="swiper-button-next">
-									<svg width="11" height="18" viewbox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1.5 2L8.5 9L1.5 16" stroke="currentColor" stroke-width="3"></path>
-									</svg>
-								</button>
-							</div>
-						</div>
-						<div data-fls-slider="" class="proposals__slider swiper">
-							<div class="proposals__wrapper swiper-wrapper">
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">-15%</div>
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-1.webp">
-									</a>
-									<a href="#" class="product-card__title">Золота каблучка - "Чарівний кошик"</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">4500 грн</div>
-											<div class="product-card__oldprice">5800 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-2.webp">
-									</a>
-									<a href="#" class="product-card__title">Золота каблучка - "Стежка до світла"</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">14 500 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">-15%</div>
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-3.webp">
-									</a>
-									<a href="#" class="product-card__title">Золота каблучка - "Тріо кохання"</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">4500 грн</div>
-											<div class="product-card__oldprice">5800 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-4.webp">
-									</a>
-									<a href="#" class="product-card__title">Золота каблучка - "Стежка зірок"</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">2500 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-5.webp">
-									</a>
-									<a href="#" class="product-card__title">Золотий перстень - "Звабливість"</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">5500 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-6.webp">
-									</a>
-									<a href="#" class="product-card__title">Золота каблучка - "Сузір'я кохання"</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">9500 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-								<div class="product-card swiper-slide">
-									<div class="product-card__badges">
-										<div class="product-card__badge">Новинка</div>
-									</div>
-									<a href="#" class="product-card__img">
-										<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-7.webp">
-									</a>
-									<a href="#" class="product-card__title">Печатка з червоного золота</a>
-									<div class="product-card__bottom">
-										<div class="product-card__prices">
-											<div class="product-card__price">9500 грн</div>
-										</div>
-										<button type="button" class="product-card__buy">
-											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
-											</svg>
-										</button>
-									</div>
-								</div>
-							</div>
-						</div>
-						<a href="#" class="proposals__all button-empty">Усі товари</a>
 					</div>
 				</section>
 			</main>
