--- a/shop.html
+++ b/shop.html
@@ -8,9 +8,9 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Shop</title>
-		<script type="module" crossorigin="" src="./js/wNumb.min.js?v=1761908700866"></script>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1761908700866"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1761908700866">
+		<script type="module" crossorigin="" src="./js/wNumb.min.js?v=1762165667992"></script>
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1762165667992"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1762165667992">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -40,23 +40,23 @@
 										<path d="M7.12411 1.60424C7.24688 1.72739 7.35396 1.86523 7.44304 2.01479L8.83525 4.3969C9.16981 4.96877 9.26833 5.65249 9.11045 6.30674C8.95256 6.96099 8.55034 7.53575 7.98693 7.91221L7.49566 8.24087C8.45555 10.0482 9.93181 11.5222 11.742 12.4806L12.0811 11.9829C12.4612 11.4245 13.0378 11.0274 13.6922 10.8734C14.3465 10.7194 15.0291 10.8201 15.5995 11.1549L17.9901 12.5596C18.3605 12.7788 18.6518 13.1078 18.8248 13.5023C18.9978 13.8967 19.0441 14.3377 18.9575 14.7655C18.7962 15.4709 18.4923 16.1393 18.0646 16.7291C17.6369 17.3189 17.0945 17.8176 16.471 18.1943C15.8963 18.564 15.2547 18.8139 14.5856 18.9285C13.9166 19.043 13.2345 19.0198 12.5815 18.8602C9.82347 18.125 7.32033 16.6849 5.31546 14.6799C3.31058 12.6749 1.87221 10.1733 1.1402 7.41836C0.979747 6.76208 0.956742 6.07663 1.07261 5.40442C1.18847 4.73221 1.44074 4.08756 1.81381 3.51036C2.18701 2.89355 2.68123 2.35674 3.26585 1.93316C3.85048 1.50957 4.51307 1.20823 5.21262 1.04778C5.55632 0.973783 5.911 0.985898 6.24468 1.08304C6.57837 1.18018 6.88059 1.35929 7.12411 1.60424ZM8.23205 11.7412C7.24132 10.7529 6.43835 9.59278 5.86045 8.31459C5.7881 8.1544 5.77612 7.97227 5.82667 7.80106C5.87722 7.62985 5.98697 7.48084 6.13612 7.38092L7.17945 6.68365C7.4222 6.52133 7.59553 6.27366 7.66366 5.99174C7.7318 5.70981 7.68955 5.41515 7.54563 5.16856L6.15619 2.78921C6.0931 2.67755 5.99585 2.58945 5.87829 2.53746C5.76072 2.48547 5.62882 2.47224 5.50136 2.49963C5.00051 2.61625 4.52657 2.83398 4.10901 3.13927C3.69146 3.44457 3.33923 3.83089 3.07425 4.27421C2.81067 4.67582 2.6309 5.12505 2.54597 5.59426C2.46105 6.06347 2.47278 6.54274 2.58044 7.00259C3.24663 9.51171 4.5562 11.7902 6.3818 13.6164C8.2074 15.4426 10.4869 16.7545 12.9986 17.4243C13.4547 17.5308 13.93 17.5423 14.3954 17.4583C14.8607 17.3743 15.3062 17.1965 15.7045 16.9358C16.1503 16.6669 16.5392 16.3119 16.8475 15.8922C17.1559 15.4726 17.3775 14.997 17.4989 14.4941C17.5241 14.3668 17.5095 14.2358 17.4571 14.1191C17.4047 14.0023 17.317 13.9054 17.2061 13.8417L14.8162 12.4391C14.5704 12.2948 14.2762 12.2514 13.9942 12.3178C13.7123 12.3842 13.4639 12.5555 13.3002 12.7963L12.592 13.8437C12.4913 13.9918 12.3419 14.1004 12.1706 14.1499C11.9993 14.1995 11.8174 14.1868 11.6576 14.114C10.3812 13.5316 9.22197 12.7286 8.23205 11.7412Z" fill="currentColor"></path>
 									</svg>
 								</a>
-								<a href="#" class="header__action">
+								<button type="button" class="header__action" data-menu="cart" data-menu-click="">
 									<svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M6.66667 5.18182V3.45455C6.66667 1.54666 8.15905 3.8147e-06 10 3.8147e-06C11.841 3.8147e-06 13.3333 1.54666 13.3333 3.45455V5.18182H20V19H0V5.18182H6.66667ZM11.6667 3.45455V5.18182H8.33333V3.45455C8.33333 2.50061 9.07953 1.72728 10 1.72728C10.9205 1.72728 11.6667 2.50061 11.6667 3.45455ZM13.3333 10.3636V6.90909H18.3333V17.2727H1.66667V6.90909H6.66667V10.3636H8.33333V6.90909H11.6667V10.3636H13.3333Z" fill="currentColor"></path>
 									</svg>
-									<span class="header__action-count">2</span>
-								</a>
+									<span class="header__action-count">4</span>
+								</button>
 							</div>
 							<div class="header__lang lang-block" data-fls-dynamic=".menu__head, 767.98">
 								<a href="#" class="lang-block__link is-active">UA</a>
 								<a href="#" class="lang-block__link">RU</a>
 							</div>
-							<a href="#" class="header__cart">
+							<button type="button" class="header__cart" data-menu="cart" data-menu-click="">
 								<svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path fill-rule="evenodd" clip-rule="evenodd" d="M6.66667 5.18182V3.45455C6.66667 1.54666 8.15905 3.8147e-06 10 3.8147e-06C11.841 3.8147e-06 13.3333 1.54666 13.3333 3.45455V5.18182H20V19H0V5.18182H6.66667ZM11.6667 3.45455V5.18182H8.33333V3.45455C8.33333 2.50061 9.07953 1.72728 10 1.72728C10.9205 1.72728 11.6667 2.50061 11.6667 3.45455ZM13.3333 10.3636V6.90909H18.3333V17.2727H1.66667V6.90909H6.66667V10.3636H8.33333V6.90909H11.6667V10.3636H13.3333Z" fill="currentColor"></path>
 								</svg>
-								<span class="header__cart-count">2</span>
-							</a>
+								<span class="header__cart-count">4</span>
+							</button>
 						</div>
 						<div class="header__menu menu" data-menu-target="menu">
 							<nav class="menu__body">
@@ -1076,6 +1076,106 @@
 					</div>
 				</div>
 			</footer>
+		</div>
+		<div class="popup" data-menu-target="cart">
+			<div class="popup__body">
+				<div class="popup__head">
+					<div class="popup__title title title--h3">Кошик</div>
+					<button type="button" class="popup__close" data-menu-close="">
+						<svg width="10" height="10" viewbox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M5.59967 4.99971L9.5 8.90004L8.90004 9.5L5.00029 5.60025L1.10055 9.5L0.500586 8.90004L4.40033 5.00029L0.5 1.09996L1.10055 0.500586L4.99971 4.39975L8.89945 0.5L9.49941 1.09996L5.59967 4.99971Z" fill="currentColor"></path>
+						</svg>
+					</button>
+				</div>
+				<div class="popup__content cart">
+					<div class="cart__products">
+						<div class="product-cart">
+							<figure class="product-cart__img">
+								<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-1.webp">
+							</figure>
+							<div class="product-cart__body">
+								<div class="product-cart__name">Каблучка з діамантами 585° 2.55 г.</div>
+								<button type="button" class="product-cart__delete">
+									<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M7 21C6.45 21 5.97933 20.8043 5.588 20.413C5.19667 20.0217 5.00067 19.5507 5 19V6H4V4H9V3H15V4H20V6H19V19C19 19.55 18.8043 20.021 18.413 20.413C18.0217 20.805 17.5507 21.0007 17 21H7ZM17 6H7V19H17V6ZM9 17H11V8H9V17ZM13 17H15V8H13V17Z" fill="currentColor"></path>
+									</svg>
+								</button>
+								<div class="product-cart__prices">
+									<div class="product-cart__oldprice">15 475 грн</div>
+									<div class="product-cart__price">12 475 грн</div>
+								</div>
+							</div>
+						</div>
+						<div class="product-cart">
+							<figure class="product-cart__img">
+								<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-2.webp">
+							</figure>
+							<div class="product-cart__body">
+								<div class="product-cart__name">Каблучка з діамантами 585° 2.55 г.</div>
+								<button type="button" class="product-cart__delete">
+									<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M7 21C6.45 21 5.97933 20.8043 5.588 20.413C5.19667 20.0217 5.00067 19.5507 5 19V6H4V4H9V3H15V4H20V6H19V19C19 19.55 18.8043 20.021 18.413 20.413C18.0217 20.805 17.5507 21.0007 17 21H7ZM17 6H7V19H17V6ZM9 17H11V8H9V17ZM13 17H15V8H13V17Z" fill="currentColor"></path>
+									</svg>
+								</button>
+								<div class="product-cart__prices">
+									<div class="product-cart__oldprice">3 475 грн</div>
+									<div class="product-cart__price">2 475 грн</div>
+								</div>
+							</div>
+						</div>
+						<div class="product-cart">
+							<figure class="product-cart__img">
+								<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-3.webp">
+							</figure>
+							<div class="product-cart__body">
+								<div class="product-cart__name">Каблучка з діамантами 585° 2.55 г.</div>
+								<button type="button" class="product-cart__delete">
+									<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M7 21C6.45 21 5.97933 20.8043 5.588 20.413C5.19667 20.0217 5.00067 19.5507 5 19V6H4V4H9V3H15V4H20V6H19V19C19 19.55 18.8043 20.021 18.413 20.413C18.0217 20.805 17.5507 21.0007 17 21H7ZM17 6H7V19H17V6ZM9 17H11V8H9V17ZM13 17H15V8H13V17Z" fill="currentColor"></path>
+									</svg>
+								</button>
+								<div class="product-cart__prices">
+									<div class="product-cart__price">9 475 грн</div>
+								</div>
+							</div>
+						</div>
+						<div class="product-cart">
+							<figure class="product-cart__img">
+								<img alt="Image" loading="lazy" src="./assets/img/menu-catalog/image-4.webp">
+							</figure>
+							<div class="product-cart__body">
+								<div class="product-cart__name">Каблучка з діамантами 585° 2.55 г.</div>
+								<button type="button" class="product-cart__delete">
+									<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M7 21C6.45 21 5.97933 20.8043 5.588 20.413C5.19667 20.0217 5.00067 19.5507 5 19V6H4V4H9V3H15V4H20V6H19V19C19 19.55 18.8043 20.021 18.413 20.413C18.0217 20.805 17.5507 21.0007 17 21H7ZM17 6H7V19H17V6ZM9 17H11V8H9V17ZM13 17H15V8H13V17Z" fill="currentColor"></path>
+									</svg>
+								</button>
+								<div class="product-cart__prices">
+									<div class="product-cart__price">9 475 грн</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="popup__bottom">
+					<div class="total-block width-long">
+						<div class="total-block__row">
+							<div class="total-block__label">Вартість товарів</div>
+							<div class="total-block__value">26 785 грн</div>
+						</div>
+						<div class="total-block__row">
+							<div class="total-block__label">Знижка</div>
+							<div class="total-block__value">-5 220 грн</div>
+						</div>
+						<div class="total-block__row title title--h4">
+							<div class="total-block__label">Загалом</div>
+							<div class="total-block__value">21 565 грн</div>
+						</div>
+					</div>
+					<a href="#" class="popup___btn button">Оформити замовлення</a>
+					<button type="button" class="popup___btn button-dark" data-menu-close="">Продовжити покупки</button>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
