--- a/article.html
+++ b/article.html
@@ -8,8 +8,8 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Article</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1762165668001"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1762165668001">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1764943442840"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1764943442840">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -84,6 +84,9 @@
 									</li>
 									<li class="menu__item">
 										<a href="#" class="menu__link">Новини та інформація</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</nav>
@@ -548,6 +551,9 @@
 									</li>
 									<li class="footer__menu-item">
 										<a href="#" class="footer__menu-link">Новини та інформація</a>
+									</li>
+									<li class="footer__menu-item">
+										<a href="#" class="footer__menu-link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</div>
