--- a/delivery.html
+++ b/delivery.html
@@ -8,8 +8,8 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Delivery</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1762165667998"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1762165667998">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1764943442838"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1764943442838">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -84,6 +84,9 @@
 									</li>
 									<li class="menu__item">
 										<a href="#" class="menu__link">Новини та інформація</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</nav>
@@ -497,6 +500,9 @@
 									</li>
 									<li class="footer__menu-item">
 										<a href="#" class="footer__menu-link">Новини та інформація</a>
+									</li>
+									<li class="footer__menu-item">
+										<a href="#" class="footer__menu-link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</div>
