--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1762165668002"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1762165668002">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1764943442841"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1764943442841">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -84,6 +84,9 @@
 									</li>
 									<li class="menu__item">
 										<a href="#" class="menu__link">Новини та інформація</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</nav>
@@ -498,6 +501,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -517,6 +521,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -538,6 +543,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -557,6 +563,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -576,6 +583,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -595,6 +603,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -614,6 +623,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -660,6 +670,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -679,6 +690,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -700,6 +712,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -719,6 +732,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -738,6 +752,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -757,6 +772,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -776,6 +792,7 @@
 											<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 											</svg>
+											Купити
 										</button>
 									</div>
 								</div>
@@ -898,6 +915,172 @@
 						</div>
 					</div>
 				</section>
+				<section class="reviews">
+					<div class="reviews__container">
+						<div class="reviews__head">
+							<h2 class="reviews__title title title--h2 lines-decor lines-decor--right">Відгуки наших клієнтів</h2>
+							<div class="reviews__navigation">
+								<button type="button" class="swiper-button-prev">
+									<svg width="12" height="18" viewbox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M10 16L3 9L10 2" stroke="currentColor" stroke-width="3"></path>
+									</svg>
+								</button>
+								<div class="swiper-pagination"></div>
+								<button type="button" class="swiper-button-next">
+									<svg width="11" height="18" viewbox="0 0 11 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M1.5 2L8.5 9L1.5 16" stroke="currentColor" stroke-width="3"></path>
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div data-fls-slider="" class="reviews__slider swiper">
+							<div class="reviews__wrapper swiper-wrapper">
+								<div class="reviews-card swiper-slide">
+									<div class="reviews-card__head">
+										<div class="reviews-card__name">Юліана</div>
+										<div class="reviews-card__stars">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+										</div>
+									</div>
+									<div class="reviews-card__text">
+										На подарунок мамі купувала каблучку, допомогли обрати правильний розмір, Отримала дуже швидко та
+                        одразу у коробочці з
+                        фірмовим пакетиком, що не потрібно було додатково його купляти. дякую, каблучка дуже
+                        сподобалась, та й ще ціна гарна.
+									</div>
+								</div>
+								<div class="reviews-card swiper-slide">
+									<div class="reviews-card__head">
+										<div class="reviews-card__name">Мар'яна</div>
+										<div class="reviews-card__stars">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+										</div>
+									</div>
+									<div class="reviews-card__text">
+										Довго не наважувалась купувати в інтернет магазині ювелірні вироби… Але усе підібрали, і розмір
+                        і дизайн, усе підійшло,
+                        як на картинці. Дякую!
+									</div>
+								</div>
+								<div class="reviews-card swiper-slide">
+									<div class="reviews-card__head">
+										<div class="reviews-card__name">Альбіна</div>
+										<div class="reviews-card__stars">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-empty.svg" alt="Image" loading="lazy">
+										</div>
+									</div>
+									<div class="reviews-card__text">
+										Думала, що подарувати на Новий Рік собі коханій та кращим рішенням стала золота каблучка)))
+                        Дякую за допомогу у
+                        визначенні мого розміру пальчику та гарну упаковку замовлення. Тепер хочу ланцюжок)))
+									</div>
+								</div>
+								<div class="reviews-card swiper-slide">
+									<div class="reviews-card__head">
+										<div class="reviews-card__name">Віталік</div>
+										<div class="reviews-card__stars">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+										</div>
+									</div>
+									<div class="reviews-card__text">
+										Обирав подарунок дружині на 31 рік, купив ланцюжок. Прийшов вчасно, свято вдалось.
+									</div>
+								</div>
+								<div class="reviews-card swiper-slide">
+									<div class="reviews-card__head">
+										<div class="reviews-card__name">Наталі</div>
+										<div class="reviews-card__stars">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-full.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-empty.svg" alt="Image" loading="lazy">
+											<img src="./assets/img/icons/star-empty.svg" alt="Image" loading="lazy">
+										</div>
+									</div>
+									<div class="reviews-card__text">
+										Я вирішила купити ланцюжок собі до хрестика та вибір пав на голдсток. Дуже задоволена якістю
+                        обсуговування, мені
+                        підбрали ланцюжок, тому що на сайті не змогла самостійно обрати! Дяка за швидку доставку та
+                        допомогу у виборі!
+									</div>
+								</div>
+							</div>
+						</div>
+						<a href="#" class="reviews__all button-empty">Усі відгуки</a>
+					</div>
+				</section>
+				<section class="features">
+					<div class="features__container">
+						<div class="features__body">
+							<h2 class="features__title title title--h2">Жовтий це:</h2>
+							<div class="features__items">
+								<div class="features__item">
+									<img src="./assets/img/icons/check-circle.svg" alt="Image" loading="lazy">
+									<span>Низькі ціни</span>
+								</div>
+								<div class="features__item">
+									<img src="./assets/img/icons/check-circle.svg" alt="Image" loading="lazy">
+									<span>Якісні товари</span>
+								</div>
+								<div class="features__item">
+									<img src="./assets/img/icons/check-circle.svg" alt="Image" loading="lazy">
+									<span>Швидка доставка</span>
+								</div>
+								<div class="features__item">
+									<img src="./assets/img/icons/check-circle.svg" alt="Image" loading="lazy">
+									<span>Зручні способи оплати</span>
+								</div>
+								<div class="features__item">
+									<img src="./assets/img/icons/check-circle.svg" alt="Image" loading="lazy">
+									<span>Професійні консультанти</span>
+								</div>
+								<div class="features__item">
+									<img src="./assets/img/icons/check-circle.svg" alt="Image" loading="lazy">
+									<span>Бездоганна репутація</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="advantages">
+					<div class="advantages__container">
+						<h2 class="advantages__title title title--h2">Жовтий у цифрах</h2>
+						<div class="advantages__items">
+							<div class="advantages__item">
+								<span class="advantages__item-num">2 000+</span>
+								<span>Клієнтів довіряють нам</span>
+							</div>
+							<div class="advantages__item">
+								<span class="advantages__item-num">97%</span>
+								<span>Позитивних відгуків та рекомендацій</span>
+							</div>
+							<div class="advantages__item">
+								<span class="advantages__item-num">30%</span>
+								<span>Економія часу/коштів нашим клієнтам</span>
+							</div>
+							<div class="advantages__item">
+								<span class="advantages__item-num">5+</span>
+								<span>Років бездоганної роботи на ринку</span>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">
 				<div class="footer__container">
@@ -926,6 +1109,9 @@
 									</li>
 									<li class="footer__menu-item">
 										<a href="#" class="footer__menu-link">Новини та інформація</a>
+									</li>
+									<li class="footer__menu-item">
+										<a href="#" class="footer__menu-link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</div>
