--- a/shop.html
+++ b/shop.html
@@ -8,9 +8,8 @@
 		<link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Shop</title>
-		<script type="module" crossorigin="" src="./js/wNumb.min.js?v=1762165667992"></script>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1762165667992"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1762165667992">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1764943442836"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1764943442836">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -85,6 +84,9 @@
 									</li>
 									<li class="menu__item">
 										<a href="#" class="menu__link">Новини та інформація</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</nav>
@@ -452,17 +454,17 @@
 								</div>
 								<div data-fls-spollers="" class="aside-block__items">
 									<details class="aside-block__item" data-fls-spollers-open="">
-										<summary class="aside-block__subtitle">Цінa</summary>
+										<summary class="aside-block__subtitle">Ціна</summary>
 										<div class="aside-block__body">
 											<div class="price-inputs">
-												<input data-start-value="" autocomplete="off" type="number" name="priceStart" value="0" class="price-inputs__input">
+												<input data-start-value="" autocomplete="off" type="number" name="price_from" value="0" min="0" class="price-inputs__input">
 												<span>-</span>
-												<input data-end-value="" autocomplete="off" type="number" name="priceEnd" value="100000" class="price-inputs__input">
+												<input data-end-value="" autocomplete="off" type="number" name="price_to" value="19" max="19" class="price-inputs__input">
 											</div>
-											<div data-fls-range-price="" class="range" data-min="0" data-max="100000"></div>
+											<div data-fls-range-price="" class="range" data-min="0" data-max="19" data-start="0" data-end="19"></div>
 										</div>
 									</details>
-									<details class="aside-block__item">
+									<details class="aside-block__item" data-fls-spollers-open="">
 										<summary class="aside-block__subtitle">Тип металу</summary>
 										<div class="aside-block__body">
 											<label data-fls-checkbox="" class="checkbox">
@@ -659,6 +661,82 @@
 											</label>
 										</div>
 									</details>
+									<details class="aside-block__item">
+										<summary class="aside-block__subtitle">Каміння</summary>
+										<div class="aside-block__body">
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="1" name="sex">
+												<span class="checkbox__text">З камінням</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="2" name="sex">
+												<span class="checkbox__text">Без каміння</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" checked value="3" name="sex">
+												<span class="checkbox__text">Мікс каменів</span>
+											</label>
+										</div>
+									</details>
+									<details class="aside-block__item">
+										<summary class="aside-block__subtitle">Колір металу</summary>
+										<div class="aside-block__body">
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="1" name="sex">
+												<span class="checkbox__text">Білий</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="2" name="sex">
+												<span class="checkbox__text">Жовтий</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" checked value="3" name="sex">
+												<span class="checkbox__text">Комбінований</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" checked value="3" name="sex">
+												<span class="checkbox__text">Червоний</span>
+											</label>
+										</div>
+									</details>
+									<details class="aside-block__item">
+										<summary class="aside-block__subtitle">Подарунок</summary>
+										<div class="aside-block__body">
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="1" name="sex">
+												<span class="checkbox__text">День народження</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="2" name="sex">
+												<span class="checkbox__text">8 березня</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" checked value="3" name="sex">
+												<span class="checkbox__text">день св. Валентина</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" checked value="3" name="sex">
+												<span class="checkbox__text">Новий рік</span>
+											</label>
+										</div>
+									</details>
+									<details class="aside-block__item">
+										<summary class="aside-block__subtitle">На руку</summary>
+										<div class="aside-block__body">
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="1" name="sex">
+												<span class="checkbox__text">16–18 см</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" value="2" name="sex">
+												<span class="checkbox__text">20–22 см</span>
+											</label>
+											<label data-fls-checkbox="" class="checkbox">
+												<input class="checkbox__input" type="checkbox" checked value="3" name="sex">
+												<span class="checkbox__text">24–26 см</span>
+											</label>
+										</div>
+									</details>
 								</div>
 								<button type="button" class="aside-block__close-btn button" data-menu-close="">Закрити</button>
 							</aside>
@@ -721,6 +799,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -740,6 +819,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -761,6 +841,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -780,6 +861,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -799,6 +881,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -818,6 +901,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -837,6 +921,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -858,6 +943,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -877,6 +963,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -898,6 +985,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -917,6 +1005,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -936,6 +1025,7 @@
 												<svg width="21" height="20" viewbox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M7.16667 5.18182V3.45455C7.16667 1.54665 8.65905 0 10.5 0C12.341 0 13.8333 1.54665 13.8333 3.45455V5.18182H20.5V19H0.5V5.18182H7.16667ZM12.1667 3.45455V5.18182H8.83333V3.45455C8.83333 2.50061 9.57953 1.72727 10.5 1.72727C11.4205 1.72727 12.1667 2.50061 12.1667 3.45455ZM13.8333 10.3636V6.90909H18.8333V17.2727H2.16667V6.90909H7.16667V10.3636H8.83333V6.90909H12.1667V10.3636H13.8333Z" fill="currentColor"></path>
 												</svg>
+												Купити
 											</button>
 										</div>
 									</div>
@@ -1001,6 +1091,9 @@
 									</li>
 									<li class="footer__menu-item">
 										<a href="#" class="footer__menu-link">Новини та інформація</a>
+									</li>
+									<li class="footer__menu-item">
+										<a href="#" class="footer__menu-link">Відгуки наших клієнтів</a>
 									</li>
 								</ul>
 							</div>
